rename sticks to poly_lines, since really that's what they are

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,8 @@ add_executable(boralago
                 src/poly_line.cc
                 src/polygon.cc
                 src/renderer.cc
-                src/stick_cell.cc
-                src/stick_inflator.cc
+                src/poly_line_cell.cc
+                src/poly_line_inflator.cc
                 ${PROTO_SRCS}
                 ${PROTO_HDRS})
 
